Update build files to use python3 and calypso 2.0
Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/calypso.1
+++ b/calypso.1
@@ -1,4 +1,4 @@
-.TH CALYPSO "1" "August 2013" "calypso 1.1" "User Commands"
+.TH CALYPSO "1" "March 2019" "calypso 2.0" "User Commands"
 .SH NAME
 calypso \- CalDAV/CardDAV server with git storage
 .SH SYNOPSIS
@@ -46,7 +46,7 @@ set location of file containing calypso process-id
 .SH AUTHOR
 Written by Keith Packard <keithp@keithp.com>
 .SH COPYRIGHT
-Copyright © 2011 Keith Packard
+Copyright © 2011,2019 Keith Packard
 .br
 Copyright © 2008-2011 Guillaume Ayoub
 .br
@@ -55,12 +55,12 @@ Copyright © 2008 Nicolas Kandel
 Copyright © 2008 Pascal Halter
 .br
 .P
-This library is free software: you can redistribute it and/or modify
+This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 .P
-This library is distributed in the hope that it will be useful,
+This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
