--- a/README
+++ b/README
@@ -72,7 +72,7 @@ This will update any changed entries and add any new ones.
 Kerberos via GSSAPI support
 ---------------------------
 For Kerberos authentication generate a keytab on your KDC and put the
-exported keytab on your calypso server into */etc/krb.keytab* so it
+exported keytab on your calypso server into /etc/krb5.keytab so it
 looks like:
 
   # ktutil -k /etc/krb5.keytab list
@@ -83,10 +83,10 @@ looks like:
     1  des3-cbc-sha1            HTTP/foo.example.com@EXAMPLE.COM
     1  arcfour-hmac-md5         HTTP/foo.example.com@EXAMPLE.COM
 
-the put the service name to use into ~/.config/calypso/config:
+then put the service name to use into ~/.config/calypso/config:
 
   [server]
-  servicename=HTTP@foo.example.com
+  servicename=HTTP/foo.example.com@EXAMPLE.COM
 
-and install the pykerberos module. You should then be able to authenticate
-via Kerberos using GSSAPI.
+and install the gssapi module with `pip install gssapi`.
+You should then be able to authenticate via Kerberos using GSSAPI.
